# scarlet

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
examples/: .scarlet.yml.nextjs-monorepo  .scarlet.yml.python-fastapi  .scarlet.yml.vite-react
src/scarlet/: __init__.py  cli.py  config.py  server.py
src/scarlet/analyzer/: __init__.py  features.py  imports.py  invariants.py  metadata.py  project.py
src/scarlet/generator/: __init__.py  barrel.py  claude_md.py  dep_graph.py  template.py
src/scarlet/validator/: __init__.py  linter.py
