[project]
name = "scarlet"
version = "0.1.0"
description = "Codebase cartographer MCP server. Generates and maintains structural documentation: feature CLAUDE.md files, barrel exports, dependency graphs, symbol manifests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "click",
    "pyyaml",
]

[project.scripts]
scarlet = "scarlet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scarlet"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
